[gd_scene load_steps=52 format=4 uid="uid://drf00euunk28e"]

[ext_resource type="Script" path="res://Scripts/main_game_root.gd" id="1_r4rf2"]
[ext_resource type="PackedScene" uid="uid://c76sf0n368gv4" path="res://Scenes/MainMenu.tscn" id="2_nqvhn"]
[ext_resource type="FontFile" uid="uid://c4eu1kn67kihh" path="res://Font/PublicPixel.ttf" id="5_0qwkx"]
[ext_resource type="Script" path="res://Scripts/pause.gd" id="6_kgebu"]
[ext_resource type="Texture2D" uid="uid://cvyv5q25hodki" path="res://Sprites/Ship/ShipMapFull64.png" id="7_jo1f3"]
[ext_resource type="Texture2D" uid="uid://pxpol64cl1vw" path="res://Sprites/GUI/HUD.png" id="8_yesbj"]
[ext_resource type="Theme" uid="uid://bq0tvgfce2vgh" path="res://Themes/main_theme.tres" id="9_max18"]
[ext_resource type="Texture2D" uid="uid://dl0ifvh31r7i3" path="res://Sprites/GUI/aibase.png" id="10_tistk"]
[ext_resource type="Texture2D" uid="uid://d3x87xs0amprl" path="res://Sprites/GUI/aieye.png" id="11_obkr1"]
[ext_resource type="Texture2D" uid="uid://crs12nuhp2j5m" path="res://Sprites/GUI/buttons.png" id="13_yy8ps"]
[ext_resource type="AudioStream" uid="uid://dd2mpwuspqhtp" path="res://SFX/UI/JDSherbert - Pixel UI SFX Pack - Cursor 1 (Sine).ogg" id="14_3ki5f"]
[ext_resource type="Texture2D" uid="uid://bfv2u87lnjd6t" path="res://Sprites/GUI/bar_front.png" id="15_lwm4y"]
[ext_resource type="Shader" path="res://Shaders/crt_final.gdshader" id="16_dk4ul"]

[sub_resource type="LabelSettings" id="LabelSettings_bal1e"]
font = ExtResource("5_0qwkx")
font_size = 32
outline_color = Color(0, 0, 0, 1)

[sub_resource type="Gradient" id="Gradient_usjmd"]
colors = PackedColorArray(0.133333, 0.12549, 0.203922, 1, 0.418264, 0.121523, 0.156397, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_hdg5q"]
gradient = SubResource("Gradient_usjmd")
width = 256
height = 256
fill_from = Vector2(0.5, 1)
fill_to = Vector2(0.5, 0)
metadata/_snap_enabled = true

[sub_resource type="AtlasTexture" id="AtlasTexture_i1bh5"]
atlas = ExtResource("10_tistk")
region = Rect2(323, 1, 10, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_qwa8j"]
atlas = ExtResource("11_obkr1")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_s5heg"]
atlas = ExtResource("11_obkr1")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dk47y"]
atlas = ExtResource("11_obkr1")
region = Rect2(128, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_j3va4"]
atlas = ExtResource("11_obkr1")
region = Rect2(192, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1uxgh"]
atlas = ExtResource("11_obkr1")
region = Rect2(256, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_h4h1q"]
atlas = ExtResource("11_obkr1")
region = Rect2(320, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_smmve"]
atlas = ExtResource("11_obkr1")
region = Rect2(384, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_78bmd"]
atlas = ExtResource("11_obkr1")
region = Rect2(448, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_syl3p"]
atlas = ExtResource("11_obkr1")
region = Rect2(512, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_271ge"]
atlas = ExtResource("11_obkr1")
region = Rect2(576, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3wiux"]
atlas = ExtResource("11_obkr1")
region = Rect2(640, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_t88ih"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qwa8j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s5heg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dk47y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j3va4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1uxgh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h4h1q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_smmve")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_78bmd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_syl3p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_271ge")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3wiux")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qwa8j")
}],
"loop": false,
"name": &"default",
"speed": 6.0
}]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_n1i6i"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_wppx4"]
texture = ExtResource("13_yy8ps")
region_rect = Rect2(52, 54, 8, 6)
modulate_color = Color(0.392157, 0.392157, 0.392157, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_rcav3"]
texture = ExtResource("13_yy8ps")
region_rect = Rect2(116, 55, 8, 5)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_esstq"]
texture = ExtResource("13_yy8ps")
region_rect = Rect2(52, 54, 8, 6)
modulate_color = Color(0.821789, 0.821789, 0.821789, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_p3vev"]
texture = ExtResource("13_yy8ps")
region_rect = Rect2(52, 54, 8, 6)
modulate_color = Color(0.784314, 0.784314, 0.784314, 1)

[sub_resource type="ButtonGroup" id="ButtonGroup_r44r6"]
allow_unpress = true

[sub_resource type="InputEventAction" id="InputEventAction_jwbxc"]
action = &"pause"
pressed = true

[sub_resource type="Shortcut" id="Shortcut_4ntwf"]
events = [SubResource("InputEventAction_jwbxc")]

[sub_resource type="OggPacketSequence" id="OggPacketSequence_dnxjc"]
packet_data = Array[Array]([[PackedByteArray("AXZvcmJpcwAAAAACgLsAAP////8A7gIA/////7gB")], [PackedByteArray("A3ZvcmJpcywAAABYaXBoLk9yZyBsaWJWb3JiaXMgSSAyMDE1MDEwNSAo4puE4puE4puE4puEKQYAAAARAAAARU5DT0RFUj1GTCBTdHVkaW82AAAAVElUTEU9SkRTaGVyYmVydCAtIFBpeGVsIFVJIFNGWCBQYWNrIC0gQ3Vyc29yIDEgKFNpbmUpEAAAAEdFTlJFPVNvdW5kIENsaXARAAAAQVJUSVNUPUpEU2hlcmJlcnRkAAAAQ09NTUVOVD1MaWNlbnNlZCBmb3IgUGl4ZWwgVUkgU0ZYIFBhY2suDeKElzIwMjMgSkRTaGVyYmVydC4gDcKpMjAyMyBKRFNoZXJiZXJ0LiBBbGwgcmlnaHRzIHJlc2VydmVkLiQAAABDT05UQUNUPWh0dHBzOi8vbGlua3RyLmVlL0pEU2hlcmJlcnQB"), PackedByteArray("BXZvcmJpcytCQ1YBAAgAAAAxTCDFgNCQVQAAEAAAYCQpDpNmSSmllKEoeZiUSEkppZTFMImYlInFGGOMMcYYY4wxxhhjjCA0ZBUAAAQAgCgJjqPmSWrOOWcYJ45yoDlpTjinIAeKUeA5CcL1JmNuprSma27OKSUIDVkFAAACAEBIIYUUUkghhRRiiCGGGGKIIYcccsghp5xyCiqooIIKMsggg0wy6aSTTjrpqKOOOuootNBCCy200kpMMdVWY669Bl18c84555xzzjnnnHPOCUJDVgEAIAAABEIGGWQQQgghhRRSiCmmmHIKMsiA0JBVAAAgAIAAAAAAR5EUSbEUy7EczdEkT/IsURM10TNFU1RNVVVVVXVdV3Zl13Z113Z9WZiFW7h9WbiFW9iFXfeFYRiGYRiGYRiGYfh93/d93/d9IDRkFQAgAQCgIzmW4ymiIhqi4jmiA4SGrAIAZAAABAAgCZIiKZKjSaZmaq5pm7Zoq7Zty7Isy7IMhIasAgAAAQAEAAAAAACgaZqmaZqmaZqmaZqmaZqmaZqmaZpmWZZlWZZlWZZlWZZlWZZlWZZlWZZlWZZlWZZlWZZlWZZlWZZlWUBoyCoAQAIAQMdxHMdxJEVSJMdyLAcIDVkFAMgAAAgAQFIsxXI0R3M0x3M8x3M8R3REyZRMzfRMDwgNWQUAAAIACAAAAAAAQDEcxXEcydEkT1It03I1V3M913NN13VdV1VVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVWB0JBVAAAEAAAhnWaWaoAIM5BhIDRkFQCAAAAAGKEIQwwIDVkFAAAEAACIoeQgmtCa8805DprloKkUm9PBiVSbJ7mpmJtzzjnnnGzOGeOcc84pypnFoJnQmnPOSQyapaCZ0JpzznkSmwetqdKac84Z55wOxhlhnHPOadKaB6nZWJtzzlnQmuaouRSbc86JlJsntblUm3POOeecc84555xzzqlenM7BOeGcc86J2ptruQldnHPO+WSc7s0J4ZxzzjnnnHPOOeecc84JQkNWAQBAAAAEYdgYxp2CIH2OBmIUIaYhkx50jw6ToDHIKaQejY5GSqmDUFIZJ6V0gtCQVQAAIAAAhBBSSCGFFFJIIYUUUkghhhhiiCGnnHIKKqikkooqyiizzDLLLLPMMsusw84667DDEEMMMbTSSiw11VZjjbXmnnOuOUhrpbXWWiullFJKKaUgNGQVAAACAEAgZJBBBhmFFFJIIYaYcsopp6CCCggNWQUAAAIACAAAAPAkzxEd0REd0REd0REd0REdz/EcURIlURIl0TItUzM9VVRVV3ZtWZd127eFXdh139d939eNXxeGZVmWZVmWZVmWZVmWZVmWZQlCQ1YBACAAAABCCCGEFFJIIYWUYowxx5yDTkIJgdCQVQAAIACAAAAAAEdxFMeRHMmRJEuyJE3SLM3yNE/zNNETRVE0TVMVXdEVddMWZVM2XdM1ZdNVZdV2Zdm2ZVu3fVm2fd/3fd/3fd/3fd/3fd/XdSA0ZBUAIAEAoCM5kiIpkiI5juNIkgSEhqwCAGQAAAQAoCiO4jiOI0mSJFmSJnmWZ4maqZme6amiCoSGrAIAAAEABAAAAAAAoGiKp5iKp4iK54iOKImWaYmaqrmibMqu67qu67qu67qu67qu67qu67qu67qu67qu67qu67qu67qu67pAaMgqAEACAEBHciRHciRFUiRFciQHCA1ZBQDIAAAIAMAxHENSJMeyLE3zNE/zNNETPdEzPVV0RRcIDVkFAAACAAgAAAAAAMCQDEuxHM3RJFFSLdVSNdVSLVVUPVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVdU0TdM0gdCQlQAAGQAAAinFmoRQkkFOSuxFacYgB60G5SmEGJPYi+mYQshRUCpkDBnkQMnUMYYQ82JjpxRCzIvxpXOMQS/GuFJCKMEIQkNWBABRAAAGSSJJJEnyNKJI9CTNI4o8EYAkejyP50meyPN4HgBJFHkez5NEkefxPAEAAAEOAAABFkKhISsCgDgBAIskeR5J8jyS5Hk0TRQhipKmiSLPM02eZopMU1WhqpKmiSLPM02aJ5pMU1Whqp4oqipVdV2q6bpk27Zhy54oqipVdV2m6rps2bYh2wAAACRPU02aZpo0zTSJompCVSXNM1WaZpo0zTSJoqlCVT1TdF2m6bpM03W5rixDlj3RdF2mqbpM03W5rixDlgEAAEiep6o0zTRpmmkSRVOFakqep6o0zTRpmmkSRVWFqXqm6bpM03WZputyZVmGLXum6bpM03WZpuuSXVmGLAMAANBM05aJouwSRddlmq4L19VMU7aJoisTRddlmq4L1xVV1Zappi1TVVnmurIMWRZVVbaZqmxTVVnmurIMWQYAAAAAAAAAAICoqrZNVWWZasoy15VlyLKoqrZNVWWZqcoy17VlyLIAAIABBwCAABPKQKEhKwGAKAAAh+JYlqaJIsexLE0TTY5jWZpmiiRJ0zzPNKFZnmea0DRRVFVomiiqKgAAAgAAChwAAAJs0JRYHKDQkJUAQEgAgMNxLEvTPM/zRFE0TZPjWJbniaIomqZpqirHsSzPE0VRNE3TVFWWpWmeJ4qiaJqqqqrQNM8TRVE0TVVVVWiaKJqmaaqqqrouNE0UTdM0VVVVXRea5nmiaJqq6rquCzxPFE1TVV3XdQEAAAAAAAAAAAAAAAAAAAAABAAAHDgAAAQYQScZVRZhowkXHoBCQ1YEAFEAAIAxiDHFmFEKQiklNEpBCSWUCkJpqaSUSUittdYyKam11lolpbSWWsugpNZaa5mE1lprrQAAsAMHALADC6HQkJUAQB4AAIKMUow55xw1RinGnHOOGqMUY845R5VSyjnnIKSUKsWccw5SShlzzjnnKKWMOeecc5RS55xzzjlKqZTOOeccpVRK55xzjlIqJWPOOScAAKjAAQAgwEaRzQlGggoNWQkApAIAGBzHsjzP80zRNC1J0jRRFEXTVFVLkjRNFE1RNVWVZWmaKJqmqrouTdM0UTRNVXVdqup5pqmqruu6VFf0TFNVXVeWAQAAAAAAAAAAAAEA4AkOAEAFNqyOcFI0FlhoyEoAIAMAADEGIWQMQsgYhBRCCCmlEBIAADDgAAAQYEIZKDRkJQCQCgAAGKOUc85JSaVCiDHnIJTSUoUQY85BKKWlqDHGIJSSUmtRY4xBKCWl1qJrIZSSUkqtRddCKCWl1lqLUqpUSmqtxRilVKmU1lqLMUqpc0qtxRhjlFL3lFqLsdYopXQyxhhjrc0552SMMcZaCwBAaHAAADuwYXWEk6KxwEJDVgIAeQAACEJKMcYYYxAhpRhjzDGHkFKMMcYYVIoxxhxjDkLIGGOMMQchZIwx55yDEDLGGGPOQQidc44x5yCE0DnHmHMQQuecY8w5CKFzjDHmnAAAoAIHAIAAG0U2JxgJKjRkJQAQDgAAGMOYc4w5Bp2ECiHnIHQOQiqpVAg5B6FzEEpJqXgOOikhlFJKKsVzEEoJoZSUWisuhlJKKKWk1FKRMYRSSiklpdaKMaaEkFJKqbVWjDGhhFRSSim2YoyNpaTUWmutFWNsLCWV1lprrRhjjGsptRZjrMUYY1xLqaUYayzGGON7ai3GWGMxxhifW2opplwLADB5cACASrBxhpWks8LR4EJDVgIAuQEACEJKMcaYY84555xzzkmlGHPOOecghBBCCCGUSjHmnHPOQQchhBBCKBlzzjkHIYQQQgghhFBS6phzDkIIIYQQQgghpdQ55yCEEEIIIYQQQkqpc85BCCGEEEIIIYSUUgghhBBCCCGEEEIIKaWUQgghhBBCCCGUElJKKYUQQgglhBJKCCWklFIKIYQQQimlhFJCSSmlFEIIpZRQSimhlJBSSimlEEIopZRQSiklpZRSSiWUUkopJZRQSkoppZRKKKGUUEoppZSUUkoplVJKKSWUUkoJKaWUUkqplFJKKaWUUlJKKaWUUimllFJKKaWklFJKKaVSSimllBJKSSmllFJKpZRQSimllFJSSimllEoKpZRSSimlAACgAwcAgAAjKi3ETjOuPAJHFDJMQIWGrAQAUgEAAEIopZRSSik1jFFKKaWUUoocpJRSSimllFJKKaWUUkoplVJKKaWUUkoppZRSSimllFJKKaWUUkoppZRSSimllFJKKaWUUkoppZRSSimllFJKKaWUUkoppZRSSimllFJKKaWUUkoppZRSSgHA3RcOgD4TNqyOcFI0FlhoyEoAIBUAADCGMcaYcs45pZRzzjkGnZRIKecgdE5KKT2EEEIInYSUegchhBBCKSn1GEMoIZSUUuuxhk46CKW01GsPIYSUWmqp9x4yqCilklLvPbVQUmopxt57SyWz0lprvefeSyopxtp67zm3klJMLRYAYBLhAIC4YMPqCCdFY4GFhqwCAGIAAAhDDEJIKaWUUkopxhhjjDHGGGOMMcYYY4wxxhhjjDEBAIAJDgAAAVawK7O0aqO4qZO86IPAJ3TEZmTIpVTM5ETQIzXUYiXYoRXc4AVgoSErAQAyAADEUaw1xl4rYhiEkmosDUGMQYm5ZcYo5STm1imllJNYU8iUUsxZiiV0TClGKaYSQsaUpBhjjCl00lrOPbdUSgsAAIAgAMBAhMwEAgVQYCADAA4QEqQAgMICQ8dwERCQS8goMCgcE85Jpw0AQBAiM0QiYjFITKgGiorpAGBxgSEfADI0NtIuLqDLABd0cdeBEIIQhCAWB1BAAg5OuOGJNzzhBifoFJU6EAAAAAAACAB4AABINoCIaGbmODo8PkBCREZISkxOUFJUBAAAAAAAEAA+AACSFSAimpk5jg6PD5AQkRGSEpMTlBSVAABAAAEAAAAAEEAAAgICAAAAAAABAAAAAgI=")], [PackedByteArray("3KrfPuy7LnJBu1W/fdh3XeSCdlJdY5Cu2CsFKJ/HFYArsHNk65iNA6u948N8yof5FBu1FRvsscMeG7E1H/JpPuTTPPK6juOGNXxhDZ9FhxYddvsxRAA="), PackedByteArray("1KJf3jxusagGoRb98uZxi0U1COVUVJcJAAAgfAGfJSwYCQU="), PackedByteArray("mgju2bcAZHRXfjXutxRqiongnn0LQEZ35Vfjfkuhpjh4MsqKmjXUrKquKIsEEKK6YjAJAAAAAAAAAAAAAMBCEIiJiCBJCko5fAExQTExEcIR4UoJ2lusFqvFarG1sbWxtbG18enDp8frcR0DMFm/H6DbBQA="), PackedByteArray("Hpidgg8BrPxEwvONy5oxMDsFHwJY+YmE5xuXNSPlAwBAAgAAAAAAAAAAAAAAQF0qAABARazqAIcQgYBRhEDPj8iSA4KJ9AE="), PackedByteArray("Hoa8bOwugNx9tyO8Y7cEoKYYhrxs7C6A3H23I7xjtwSgpjhYyGMEQBRLKuXSMCZJEZkujjGbJAAAAAAAgbiYgFBCEVooFBVnlgFLCBdSAhzKFWeoQ4uYIqaIVSxWtWhYIxgsRtIxOgx1MYSJ0FmMFMroDBOZIayRQjKGL9TFECZCZzFSqMthGE8sRugYSRjPoI+ks+gM4yJhInQWIxnKECaCQR9JF9njxTFzMGE4XkUinugjGGi/xdCNLcpwzPXhxTFzDI0Q+y32u57AGYYxfAYTJgyZeXw66OuH2G+xH0boxhZDd6IPo98ndF3hC7XondBbhNNJ4CQweu8QntBIDr1D43K2Ebpa7Lduv68bAYA3Fn3A6PfpKQD48BFAb5ECox+6QjfqRiN0I7pdGP1AN4Ihjj4AXQA="), PackedByteArray("Dg==")]])
granule_positions = PackedInt64Array(0, 0, 3500)
sampling_rate = 48000.0

[sub_resource type="AudioStreamOggVorbis" id="AudioStreamOggVorbis_02kcu"]
packet_sequence = SubResource("OggPacketSequence_dnxjc")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fghk4"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_j4x8s"]
texture = ExtResource("13_yy8ps")
region_rect = Rect2(98, 55, 8, 5)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_gjsex"]
texture = ExtResource("13_yy8ps")
region_rect = Rect2(34, 54, 8, 6)
modulate_color = Color(0.821789, 0.821789, 0.821789, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ajqns"]
texture = ExtResource("13_yy8ps")
region_rect = Rect2(34, 54, 8, 6)
modulate_color = Color(0.784314, 0.784314, 0.784314, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_sqojt"]
texture = ExtResource("13_yy8ps")
region_rect = Rect2(107, 55, 8, 5)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_vgfts"]
texture = ExtResource("13_yy8ps")
region_rect = Rect2(43, 54, 8, 6)
modulate_color = Color(0.821789, 0.821789, 0.821789, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_6x4c0"]
texture = ExtResource("13_yy8ps")
region_rect = Rect2(43, 54, 8, 6)
modulate_color = Color(0.784314, 0.784314, 0.784314, 1)

[sub_resource type="Gradient" id="Gradient_icaia"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0.133333, 0.12549, 0.203922, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_pqonp"]
gradient = SubResource("Gradient_icaia")
width = 49

[sub_resource type="Gradient" id="Gradient_srywk"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0.796078, 0.858824, 0.988235, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_v5frn"]
gradient = SubResource("Gradient_srywk")
width = 38

[sub_resource type="ShaderMaterial" id="ShaderMaterial_i40c6"]
shader = ExtResource("16_dk4ul")
shader_parameter/resolution = Vector2(256, 256)
shader_parameter/scan_line_amount = 0.44
shader_parameter/warp_amount = 0.2
shader_parameter/noise_amount = 0.05
shader_parameter/interference_amount = 0.25
shader_parameter/grille_amount = 0.1
shader_parameter/grille_size = 1.0
shader_parameter/vignette_amount = 0.6
shader_parameter/vignette_intensity = 0.5
shader_parameter/aberation_amount = 0.5
shader_parameter/roll_line_amount = 0.1
shader_parameter/roll_speed = 1.0
shader_parameter/scan_line_strength = -6.0
shader_parameter/pixel_strength = -4.0

[node name="MasterScene" type="Node" node_paths=PackedStringArray("hud_overlay", "progress_bar")]
script = ExtResource("1_r4rf2")
hud_overlay = NodePath("HUD Overlay")
default_scene = ExtResource("2_nqvhn")
progress_bar = NodePath("HUD Overlay/MissionProgressBar")

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
handle_input_locally = false
snap_2d_transforms_to_pixel = true
canvas_item_default_texture_filter = 0
audio_listener_enable_2d = true
physics_object_picking = true
size = Vector2i(256, 256)
size_2d_override = Vector2i(256, 256)
size_2d_override_stretch = true
render_target_update_mode = 4

[node name="HUD Overlay" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2

[node name="DEBUGKILLALL" type="Button" parent="HUD Overlay"]
visible = false
layout_mode = 0
offset_left = 44.0
offset_top = 8.0
offset_right = 63.0
offset_bottom = 39.0
scale = Vector2(0.75, 0.75)
text = "K"

[node name="PAUSE" type="Label" parent="HUD Overlay"]
visible = false
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "paused"
label_settings = SubResource("LabelSettings_bal1e")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true
script = ExtResource("6_kgebu")

[node name="TextureRect5" type="TextureRect" parent="HUD Overlay/PAUSE"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_jo1f3")

[node name="TextureRect4" type="TextureRect" parent="HUD Overlay/PAUSE/TextureRect5"]
modulate = Color(1, 1, 1, 0.811765)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_hdg5q")

[node name="TextureRect" type="TextureRect" parent="HUD Overlay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("8_yesbj")

[node name="AI_Base" type="TextureRect" parent="HUD Overlay"]
process_mode = 3
layout_mode = 1
offset_left = 3.0
offset_top = 1.0
offset_right = 13.0
offset_bottom = 11.0
tooltip_text = "Settings"
theme = ExtResource("9_max18")
texture = SubResource("AtlasTexture_i1bh5")

[node name="AI_Eye" type="AnimatedSprite2D" parent="HUD Overlay/AI_Base"]
position = Vector2(5, 7)
sprite_frames = SubResource("SpriteFrames_t88ih")
frame = 11
frame_progress = 1.0

[node name="Timer" type="Timer" parent="HUD Overlay/AI_Base/AI_Eye"]
wait_time = 15.0
autostart = true

[node name="Pause" type="Button" parent="HUD Overlay"]
process_mode = 3
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -12.0
offset_top = -8.0
offset_right = -4.0
offset_bottom = -3.0
grow_horizontal = 0
grow_vertical = 0
tooltip_text = "Pause"
theme = ExtResource("9_max18")
theme_override_styles/focus = SubResource("StyleBoxEmpty_n1i6i")
theme_override_styles/disabled = SubResource("StyleBoxTexture_wppx4")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_rcav3")
theme_override_styles/hover = SubResource("StyleBoxTexture_esstq")
theme_override_styles/pressed = SubResource("StyleBoxTexture_rcav3")
theme_override_styles/normal = SubResource("StyleBoxTexture_p3vev")
toggle_mode = true
action_mode = 0
button_group = SubResource("ButtonGroup_r44r6")
shortcut = SubResource("Shortcut_4ntwf")

[node name="Pause" type="AudioStreamPlayer" parent="HUD Overlay/Pause"]
stream = SubResource("AudioStreamOggVorbis_02kcu")
pitch_scale = 1.6

[node name="Unpause" type="AudioStreamPlayer" parent="HUD Overlay/Pause"]
stream = ExtResource("14_3ki5f")

[node name="Lock All" type="Button" parent="HUD Overlay"]
process_mode = 3
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -30.0
offset_top = -8.0
offset_right = -22.0
offset_bottom = -3.0
grow_horizontal = 0
grow_vertical = 0
tooltip_text = "Pause"
theme_override_styles/focus = SubResource("StyleBoxEmpty_fghk4")
theme_override_styles/disabled = SubResource("StyleBoxTexture_wppx4")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_j4x8s")
theme_override_styles/hover = SubResource("StyleBoxTexture_gjsex")
theme_override_styles/pressed = SubResource("StyleBoxTexture_j4x8s")
theme_override_styles/normal = SubResource("StyleBoxTexture_ajqns")
action_mode = 0

[node name="Unlock All" type="Button" parent="HUD Overlay"]
process_mode = 3
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -21.0
offset_top = -8.0
offset_right = -13.0
offset_bottom = -3.0
grow_horizontal = 0
grow_vertical = 0
tooltip_text = "Unlock All Doors"
theme_override_styles/focus = SubResource("StyleBoxEmpty_fghk4")
theme_override_styles/disabled = SubResource("StyleBoxTexture_wppx4")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_sqojt")
theme_override_styles/hover = SubResource("StyleBoxTexture_vgfts")
theme_override_styles/pressed = SubResource("StyleBoxTexture_sqojt")
theme_override_styles/normal = SubResource("StyleBoxTexture_6x4c0")
action_mode = 0

[node name="ProgressBarBackground" type="TextureRect" parent="HUD Overlay"]
layout_mode = 0
offset_left = 13.0
offset_top = 1.0
offset_right = 62.0
offset_bottom = 4.0
texture = SubResource("GradientTexture1D_pqonp")

[node name="MissionProgressBar" type="TextureProgressBar" parent="HUD Overlay"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -45.0
offset_top = 2.0
offset_right = -7.0
offset_bottom = 3.0
grow_horizontal = 0
max_value = 38.0
step = 2.0
texture_progress = SubResource("GradientTexture1D_v5frn")

[node name="MissionProgressTimer" type="Timer" parent="HUD Overlay/MissionProgressBar"]
wait_time = 1.5

[node name="ProgressBarFront" type="TextureRect" parent="HUD Overlay"]
layout_mode = 0
offset_left = 13.0
offset_right = 62.0
offset_bottom = 5.0
texture = ExtResource("15_lwm4y")

[node name="CRT Shader" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TextureRect" type="ColorRect" parent="CRT Shader"]
material = SubResource("ShaderMaterial_i40c6")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[connection signal="pressed" from="HUD Overlay/DEBUGKILLALL" to="." method="DEBUG_KILL_ALL"]
[connection signal="timeout" from="HUD Overlay/AI_Base/AI_Eye/Timer" to="HUD Overlay/AI_Base/AI_Eye" method="_on_timer_timeout"]
[connection signal="toggled" from="HUD Overlay/Pause" to="HUD Overlay/PAUSE" method="_on_pause_button_toggled"]
[connection signal="pressed" from="HUD Overlay/Lock All" to="." method="_on_lock_all_doors_pressed"]
[connection signal="pressed" from="HUD Overlay/Unlock All" to="." method="_on_unlock_all_doors_pressed"]
